@@ -1,4 +1,4 @@
-SUBDIRS= libipc libcore on-access tools scand
+SUBDIRS= libipc libcore linux-daemon tools 
 DIST_SUBDIRS=$(SUBDIRS) os
 
 
