@@ -2,7 +2,9 @@
 
 #include "utils/getopt.h"
 #include "utils/tcpsock.h"
+#ifdef WIN32
 #include "utils/named_pipe_server.h"
+#endif
 
 #include <assert.h>
 #include <errno.h>
@@ -237,7 +239,9 @@ int main(int argc, const char **argv)
   //parse_options(argc, argv, opts);
 
   // Notes : If you intend to use a named pipe locally only, deny access to NT AUTHORITY\NETWORK or switch to local RPC.
+#ifdef WIN32
   named_pipe = start_named_pipe_server();
+#endif
 
   // do_scan(opts, client_sock);
 
